--- a/src/components/register/layout.scss
+++ b/src/components/register/layout.scss
@@ -68,6 +68,11 @@
       font-weight: 600;
       letter-spacing: 1px;
       color: #312f30;
+
+      img {
+        width: 140px;
+      }
+
       span {
         color: #00b40c;
       }
