--- a/src/components/publicHeader/header.scss
+++ b/src/components/publicHeader/header.scss
@@ -30,9 +30,18 @@ header {
       font-size: 30px;
       font-weight: 600;
 
+      display: flex;
+      align-items: center;
+
       a {
         color: #000;
         letter-spacing: 1px;
+        display: flex;
+        align-items: center;
+
+        img {
+          width: 130px;
+        }
       }
 
       span {
