--- a/src/components/notification/layout.scss
+++ b/src/components/notification/layout.scss
@@ -37,6 +37,13 @@
     }
   }
 
+  .notification-content {
+    .notification-title {
+      padding-right: 20px;
+      font-size: 14px;
+    }
+  }
+
   .notification-close {
     position: absolute;
     top: 10px;
