--- a/src/app/adminPanel/admin-header/admin-header.scss
+++ b/src/app/adminPanel/admin-header/admin-header.scss
@@ -13,19 +13,27 @@ marquee {
   position: relative;
   z-index: 1;
   .admin-header-inner {
-    max-width: 1366px;
+    // max-width: 1366px;
     height: 90px;
-    margin: 0 auto;
+    // margin: 0 auto;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 0 100px;
+    padding: 0 20px;
 
     .logo {
       font-size: 30px;
       font-weight: 600;
+      display: flex;
+      align-items: center;
+
+      img {
+        width: 140px;
+      }
 
       a {
+        display: flex;
+        align-items: center;
         color: #000;
         letter-spacing: 1px;
       }
@@ -39,11 +47,71 @@ marquee {
       display: flex;
       gap: 15px;
 
-      a {
-        color: #000;
+      .menu {
+        position: relative;
+        padding: 10px 0;
 
-        &.act {
-          color: #1ad079;
+        a:hover {
+          color: #f26225;
+        }
+
+        .box {
+          z-index: -1;
+          opacity: 0;
+          transform: translateX(-50%) translateY(10px);
+          left: 50%;
+          max-width: 300px;
+          min-width: 200px;
+          position: absolute;
+          top: 100%;
+          background-color: #f26225;
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+          pointer-events: none;
+          padding: 10px 0;
+          border-radius: 8px;
+          row-gap: 2px;
+
+          &::before {
+            content: "";
+            position: absolute;
+            top: -10px;
+            left: 50%;
+            transform: translateX(-50%);
+            border-left: 10px solid transparent;
+            border-right: 10px solid transparent;
+            border-bottom: 10px solid #f26225; // asosiy rangga mos bo‘lsin
+          }
+
+          a {
+            border-radius: 7px;
+            padding: 10px 0;
+            text-align: center;
+            color: #fff;
+            position: relative;
+            width: 90%;
+
+            &:hover {
+              background-color: #ffffff5b;
+              // text-decoration: underline;
+            }
+          }
+        }
+
+        &:hover .box {
+          opacity: 1;
+          transform: translate(-50%, 0);
+          pointer-events: auto;
+          z-index: 1;
+        }
+
+        a {
+          color: #000;
+
+          &.act {
+            color: #1ad079;
+          }
         }
       }
     }
