--- a/src/app/adminPanel/tests/page.scss
+++ b/src/app/adminPanel/tests/page.scss
@@ -5,7 +5,7 @@
     .info-container {
         display: flex;
         align-items: center;
-        justify-content: center;
+        // justify-content: center;
         background-color: #f1f1f1;
         gap: 10px;
         padding: 0 10px;
