--- a/src/components/adminPanel/science/sciences-table/sciences-table.scss
+++ b/src/components/adminPanel/science/sciences-table/sciences-table.scss
@@ -105,7 +105,7 @@
       border: 1px solid #e6561e;
     }
 
-    ul {
+    .subject-fcking-test-ul {
       padding: 10px 20px;
       margin: 0;
       list-style-type: disc;
