--- a/src/styles/not-found.scss
+++ b/src/styles/not-found.scss
@@ -2,9 +2,9 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 100vh;
+    height: 60vh;
     flex-direction: column;
-    position: absolute;
+    // position: absolute;
     top: 0;
     left: 0;
     width: 100%;
