--- a/src/app/tests/[test_name]/layout.scss
+++ b/src/app/tests/[test_name]/layout.scss
@@ -484,6 +484,10 @@
   .tests-page {
     padding: 20px;
 
+    .page-title {
+      font-size: 24px;
+    }
+
     .menu {
       flex-wrap: wrap;
 
