--- a/src/components/tests/tests.scss
+++ b/src/components/tests/tests.scss
@@ -222,10 +222,19 @@
       h1 {
         display: flex;
         align-items: center;
+        font-size: 20px;
+
+        a {
+          font-size: 15px;
+        }
       }
 
       .tests-content {
         grid-template-columns: repeat(1, 1fr);
+        
+        .test-card {
+          max-width: unset;
+        }
       }
     }
   }
