--- a/src/app/profile/[add-student]/page.scss
+++ b/src/app/profile/[add-student]/page.scss
@@ -1,10 +1,10 @@
-.add-teacher-container {
+.add-student-container {
     display: flex;
     align-items: center;
     justify-content: center;
     min-height: 100vh;
 
-    .add-teacher-content {
+    .add-student-content {
         width: 700px;
         padding: 15px;
         border-radius: 15px;
