--- a/src/app/profile/[add-student]/page.scss
+++ b/src/app/profile/[add-student]/page.scss
@@ -84,3 +84,21 @@
         }
     }
 }
+
+@media screen and (max-width: 749px) {
+ .add-student-container {
+    
+    .add-student-content {
+        
+
+        .student-details {
+            form {
+                
+                .input-row {
+                    width: 100%;
+                }
+            }
+        }
+    }
+}   
+}
