--- a/src/components/teachersClasses/teachersClasses.scss
+++ b/src/components/teachersClasses/teachersClasses.scss
@@ -6,7 +6,6 @@
   margin-top: 15px;
   width: 100%;
 
-
   .class-delete-alert-modal {
     position: fixed;
     top: 0;
@@ -20,7 +19,7 @@
     z-index: -11;
     opacity: 0;
     transform: translateX(-20px);
-    
+
     &.active {
       opacity: 1;
       z-index: 11;
@@ -48,7 +47,7 @@
         display: flex;
         gap: 10px;
         margin-top: 10px;
-        
+
         button {
           border: none;
           font-size: 15px;
@@ -59,11 +58,11 @@
           width: 50%;
 
           &:hover {
-            opacity: .8;
+            opacity: 0.8;
           }
 
           &:active {
-            transform: scale(.9);
+            transform: scale(0.9);
           }
 
           &:first-child {
@@ -185,6 +184,29 @@
             height: 24px;
           }
         }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 749px) {
+  .teacher-classes-container {
+    background-color: #fff;
+    border-radius: 15px;
+    padding: 15px;
+    box-shadow: 0 0 10px 10px #0000000a;
+    margin-top: 15px;
+    width: 100%;
+
+    .class-delete-alert-modal {
+
+      &-content {
+        width: 90%;
+      }
+    }
+    .accordion-content {
+      ul {
+        padding: 10px;
       }
     }
   }
